Revision history for {{$dist->name}}

{{$NEXT}}

0.013     2025-12-09 00:10:04+01:00 Europe/Stockholm
            * Move functionality from Env::Assert to Env::Assert::Functions.
            * Make Env::Assert usable by only: "use Env::Assert 'assert';"

0.012     2025-12-06 15:55:13+01:00 Europe/Stockholm
            * Rename dir script/ to bin/ to match with Dist::Zilla::Plugin::ExecDir defaults.
            * Add badges for license, CPAN and kwalitee to Readme.
            * Fix typos and add stopwords.

0.011     2025-09-28 09:32:02+02:00 Europe/Stockholm
            * Bump version to 0.011 and remove underscore hack.
            * Change Security Policy to use CPANSec's template.
            * Add SEE ALSO chapters to Env::Assert and script/envassert.
            * Add .github dir.
            * Add files CONTRIBUTING.md, CODE_OF_CONDUCT.md and SECURITY.md.
            * Clean dist.ini.
            * Remove fatpacker instruction from README.
            * Add new LICENSE files and change README.md.
            * Use @Filter to use PluginBundle::MIKKOI.
            * Readjust Changes file.
            * Bump version.
            * Add BumpVersionAfterRelease and Git::Commit to dist.ini.
            * Add $VERSION to library and executable files.

0.010     2024-01-02 20:32:48+01:00 Europe/Stockholm
            * Fix errors in SYNOPSIS. (Ron Savage <ron@savage.net.au>)

0.009     2023-11-15 19:35:06+01:00 Europe/Stockholm
            * Add App::FatPacker to deps.
            * Add contributor gregor herrmann <gregoa@debian.org>
            * Add Repology link to README.md.
            * Available as a Debian package. (gregor herrmann <gregoa@debian.org>)

0.008     2023-08-13 13:25:41+02:00 Europe/Berlin
            * Fix dist.ini Run::AfterRelease action.
            * Create CLI option --exact

0.007     2023-04-23 22:45:02+02:00 Europe/Stockholm
            * Replace say with print
            * Add envassert.self-contained to MANIFEST.SKIP.
